--- a/app/mission.html
+++ b/app/mission.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="css/mission.css">
   <link rel="stylesheet" href="css/media.css">
 
 </head>
@@ -91,7 +92,7 @@
       </ul>
     </div>
 
-    <header>
+    <header class="header">
       <div class="container">
         <div class="row">
           <div class="col-12 d-flex flex-wrap align-items-center">
@@ -168,148 +169,32 @@
       </div>
     </header>
 
-
-    <section class="home">
-      <div class="home-slider">
-        <div class="slide">
-          <img src="img/slide1.jpg" alt="" class="home-slider__bg">
-          <div class="container">
-            <div class="row">
-              <div class="col-12 col-lg-10 col-xl-7">
-                <div class="home-item">
-                  <div class="date">5 июня 2021</div>
-                  <div class="home-slider__title">Увеличивает ли пальмитиновая кислота шансы заболеть раком и умереть от
-                    метастазирования?
-                  </div>
-                  <div class="box-text">
-                    <p>Мы анализируем международную научную литературу, главными выводами делимся с вами. Мы выполняем
-                      свои научные исследования и пишем обзоры научной литературы по питанию</p>
-                  </div>
-
-                  <div class="btn-group">
-                    <a href="article.html" class="btn btn-white">читать статью</a>
-                    <a href="news.html" class="btn btn-border-white">посмотреть все статьи</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="slide">
-          <img src="img/slide1.jpg" alt="" class="home-slider__bg">
-          <div class="container">
-            <div class="row">
-              <div class="col-12 col-lg-10 col-xl-7">
-                <div class="home-item">
-                  <div class="date">5 июня 2021</div>
-                  <div class="home-slider__title">Увеличивает ли пальмитиновая кислота шансы заболеть раком и умереть от
-                    метастазирования?
-                  </div>
-                  <div class="box-text">
-                    <p>Мы анализируем международную научную литературу, главными выводами делимся с вами. Мы выполняем
-                      свои научные исследования и пишем обзоры научной литературы по питанию</p>
-                  </div>
-
-                  <div class="btn-group">
-                    <a href="article.html" class="btn btn-white">читать статью</a>
-                    <a href="news.html" class="btn btn-border-white">посмотреть все статьи</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="slide">
-          <img src="img/slide1.jpg" alt="" class="home-slider__bg">
-          <div class="container">
-            <div class="row">
-              <div class="col-12 col-lg-10 col-xl-7">
-                <div class="home-item">
-                  <div class="date">5 июня 2021</div>
-                  <div class="home-slider__title">Увеличивает ли пальмитиновая кислота шансы заболеть раком и умереть от
-                    метастазирования?
-                  </div>
-                  <div class="box-text">
-                    <p>Мы анализируем международную научную литературу, главными выводами делимся с вами. Мы выполняем
-                      свои научные исследования и пишем обзоры научной литературы по питанию</p>
-                  </div>
-
-                  <div class="btn-group">
-                    <a href="article.html" class="btn btn-white">читать статью</a>
-                    <a href="news.html" class="btn btn-border-white">посмотреть все статьи</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="slide">
-          <img src="img/slide1.jpg" alt="" class="home-slider__bg">
-          <div class="container">
-            <div class="row">
-              <div class="col-12 col-lg-10 col-xl-7">
-                <div class="home-item">
-                  <div class="date">5 июня 2021</div>
-                  <div class="home-slider__title">Увеличивает ли пальмитиновая кислота шансы заболеть раком и умереть от
-                    метастазирования?
-                  </div>
-                  <div class="box-text">
-                    <p>Мы анализируем международную научную литературу, главными выводами делимся с вами. Мы выполняем
-                      свои научные исследования и пишем обзоры научной литературы по питанию</p>
-                  </div>
-
-                  <div class="btn-group">
-                    <a href="article.html" class="btn btn-white">читать статью</a>
-                    <a href="news.html" class="btn btn-border-white">посмотреть все статьи</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="slide">
-          <img src="img/slide1.jpg" alt="" class="home-slider__bg">
-          <div class="container">
-            <div class="row">
-              <div class="col-12 col-lg-10 col-xl-7">
-                <div class="home-item">
-                  <div class="date">5 июня 2021</div>
-                  <div class="home-slider__title">Увеличивает ли пальмитиновая кислота шансы заболеть раком и умереть от
-                    метастазирования?
-                  </div>
-                  <div class="box-text">
-                    <p>Мы анализируем международную научную литературу, главными выводами делимся с вами. Мы выполняем
-                      свои научные исследования и пишем обзоры научной литературы по питанию</p>
-                  </div>
-
-                  <div class="btn-group">
-                    <a href="article.html" class="btn btn-white">читать статью</a>
-                    <a href="news.html" class="btn btn-border-white">посмотреть все статьи</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="slider-nav">
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-              <div class="home-slider__nav"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="about bg-accent">
+    <section class="mission">
       <div class="container">
-        <div class="about-content">
-          <div class="row">
-            <div class="col-12 col-lg-6">
-              <h2>О нас</h2>
+        <div class="row">
+          <div class="col-12">
+            <nav class="breadcrumb-nav">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
+                <li class="breadcrumb-item"><a href="#">О нас</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Миссия</li>
+              </ol>
+            </nav>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12 col-lg-6">
+            <div class="mission-content">
+              <h1>Миссия</h1>
               <div class="box-text">
+                <p>Мы анализируем международную научную литературу, главными выводами делимся с вами. Мы выполняем свои
+                  научные исследования и пишем обзоры научной литературы по питанию. Мы анализируем международную
+                  научную
+                  литературу, главными выводами делимся с вами. Мы выполняем свои научные исследования и пишем обзоры
+                  научной литературы по питаниюМы анализируем международную научную литературу, главными выводами
+                  делимся
+                  с вами. Мы выполняем свои научные исследования и пишем обзоры научной литературы по питанию</p>
                 <p>Мы анализируем международную научную литературу, главными выводами делимся с вами. Мы выполняем свои
                   научные исследования и пишем обзоры научной литературы по питанию. Мы анализируем международную
                   научную
@@ -320,8 +205,15 @@
               </div>
             </div>
           </div>
+          <div class="col-12 col-lg-6">
+            <div class="mission-img"><img src="img/mission.png" alt=""></div>
+          </div>
         </div>
+      </div>
+    </section>
 
+    <section class="about task-section bg-accent">
+      <div class="container">
         <div class="tasks-content">
           <div class="row">
             <div class="col-12">
@@ -383,140 +275,6 @@
       </div>
     </section>
 
-    <section class="news">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <h2>Новости</h2>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-12 col-sm-6 col-lg-3 mb-30">
-            <div class="news-box">
-              <a href="article.html" class="news-box__img"><img src="img/new1.jpg" alt=""></a>
-              <div class="news-box__body">
-                <div class="date">5 июня 2021</div>
-                <a href="article.html" class="news-box__name">ПМЭФ: выступление Зинаиды Медведевой</a>
-
-                <a href="article.html" class="btn btn-accent">подробнее</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-lg-3 mb-30">
-            <div class="news-box">
-              <a href="article.html" class="news-box__img"><img src="img/new2.jpg" alt=""></a>
-              <div class="news-box__body">
-                <div class="date">1 июня 2021</div>
-                <a href="article.html" class="news-box__name">"Еда как лекарство" - выступление Олега Медведева</a>
-
-                <a href="article.html" class="btn btn-accent">подробнее</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-lg-3 mb-30">
-            <div class="news-box">
-              <a href="article.html" class="news-box__img"><img src="img/new3.jpg" alt=""></a>
-              <div class="news-box__body">
-                <div class="date">1 августа 2021</div>
-                <a href="article.html" class="news-box__name">Зинаида Медведева - спикер фестиваля "Вкусно"</a>
-
-                <a href="article.html" class="btn btn-accent">подробнее</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-lg-3 mb-30">
-            <div class="news-box">
-              <a href="article.html" class="news-box__img"><img src="img/new4.jpg" alt=""></a>
-              <div class="news-box__body">
-                <div class="date">5 сентября 2021</div>
-                <a href="article.html" class="news-box__name">Жевать, чтобы похудеть!</a>
-
-                <a href="article.html" class="btn btn-accent">подробнее</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="actual-quote">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 text-center color-accent">
-            <h2>Актуальные цитаты </h2>
-          </div>
-
-          <div class="col-12">
-            <div class="actual-quote-slider">
-              <div class="slide">
-                <div class="actual-quote-item">
-                  <div class="box-text">
-                    <p>Каждый с детства усвоил элементарную истину — чтобы жить, надо есть. Наше питание — это основа
-                      здоровья и долголетия.</p>
-                  </div>
-
-                  <div class="quote-author color-accent">Фёдор Углов</div>
-                </div>
-              </div>
-
-              <div class="slide">
-                <div class="actual-quote-item">
-                  <div class="box-text">
-                    <p>Каждый с детства усвоил элементарную истину — чтобы жить, надо есть. Наше питание — это основа
-                      здоровья и долголетия.</p>
-                  </div>
-
-                  <div class="quote-author color-accent">Фёдор Углов</div>
-                </div>
-              </div>
-
-              <div class="slide">
-                <div class="actual-quote-item">
-                  <div class="box-text">
-                    <p>Каждый с детства усвоил элементарную истину — чтобы жить, надо есть. Наше питание — это основа
-                      здоровья и долголетия.</p>
-                  </div>
-
-                  <div class="quote-author color-accent">Фёдор Углов</div>
-                </div>
-              </div>
-            </div>
-            <div class="slider-nav actual-quote-slider__nav"></div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <div class="calculate-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div class="calculate-wrapper">
-              <div class="calculate-title">
-                <h2>Расчет ИМТ</h2>
-                <div class="box-text">
-                  <p>Рассчитайте свой индекс массы тела прямо сейчас (ИМТ)</p>
-                </div>
-              </div>
-
-              <form method="post" class="form-calculate">
-                <label>
-                  <input type="text" placeholder="рост" name="val1">
-                </label>
-                <label>
-                  <input type="text" placeholder="вес" name="val2">
-                </label>
-                <div class="form-group">
-                  <button type="submit" class="btn btn-white">рассчитать имт</button>
-                  <div class="total-calculate">Ваш ИМТ: 24.5 Норма</div>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
 
 
@@ -592,7 +350,9 @@
           <p>Оставьте ваши данные и мы свяжемся с вами в ближайшее время</p>
         </div>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <svg class="svg-icon"><use xlink:href="img/sprite.svg#close"></use></svg>
+          <svg class="svg-icon">
+            <use xlink:href="img/sprite.svg#close"></use>
+          </svg>
         </button>
       </div>
       <div class="modal-body">
