--- a/app/index.html
+++ b/app/index.html
@@ -188,7 +188,7 @@
 
                   <div class="btn-group">
                     <a href="article.html" class="btn btn-white">читать статью</a>
-                    <a href="news.html" class="btn btn-border-white">посмотреть все статьи</a>
+                    <a href="publication.html" class="btn btn-border-white">посмотреть все статьи</a>
                   </div>
                 </div>
               </div>
@@ -212,7 +212,7 @@
 
                   <div class="btn-group">
                     <a href="article.html" class="btn btn-white">читать статью</a>
-                    <a href="news.html" class="btn btn-border-white">посмотреть все статьи</a>
+                    <a href="publication.html" class="btn btn-border-white">посмотреть все статьи</a>
                   </div>
                 </div>
               </div>
@@ -236,7 +236,7 @@
 
                   <div class="btn-group">
                     <a href="article.html" class="btn btn-white">читать статью</a>
-                    <a href="news.html" class="btn btn-border-white">посмотреть все статьи</a>
+                    <a href="publication.html" class="btn btn-border-white">посмотреть все статьи</a>
                   </div>
                 </div>
               </div>
@@ -260,7 +260,7 @@
 
                   <div class="btn-group">
                     <a href="article.html" class="btn btn-white">читать статью</a>
-                    <a href="news.html" class="btn btn-border-white">посмотреть все статьи</a>
+                    <a href="publication.html" class="btn btn-border-white">посмотреть все статьи</a>
                   </div>
                 </div>
               </div>
@@ -284,7 +284,7 @@
 
                   <div class="btn-group">
                     <a href="article.html" class="btn btn-white">читать статью</a>
-                    <a href="news.html" class="btn btn-border-white">посмотреть все статьи</a>
+                    <a href="publication.html" class="btn btn-border-white">посмотреть все статьи</a>
                   </div>
                 </div>
               </div>
