--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
@@ -305,7 +306,7 @@
 
     <section class="about bg-accent">
       <div class="container">
-        <div class="about-content">
+        <div class="about-content  wow animate__animated animate__fadeInLeft">
           <div class="row">
             <div class="col-12 col-lg-6">
               <h2>О нас</h2>
@@ -324,13 +325,13 @@
 
         <div class="tasks-content">
           <div class="row">
-            <div class="col-12">
+            <div class="col-12 wow animate__animated animate__fadeInUp">
               <h2>Основные задачи центра</h2>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-12 col-sm-6 col-xl-3 mb-30">
+            <div class="col-12 col-sm-6 col-xl-3 mb-30 wow animate__animated animate__fadeInLeft">
               <div class="about-box">
                 <div class="about-box__head">
                   <div class="about-box__icon"><img src="img/icon1.svg" alt=""></div>
@@ -343,7 +344,7 @@
               </div>
             </div>
 
-            <div class="col-12 col-sm-6 col-xl-3 mb-30">
+            <div class="col-12 col-sm-6 col-xl-3 mb-30 wow animate__animated animate__fadeInLeft">
               <div class="about-box">
                 <div class="about-box__head">
                   <div class="about-box__icon"><img src="img/icon2.svg" alt=""></div>
@@ -355,7 +356,7 @@
               </div>
             </div>
 
-            <div class="col-12 col-sm-6 col-xl-3 mb-30">
+            <div class="col-12 col-sm-6 col-xl-3 mb-30 wow animate__animated animate__fadeInRight">
               <div class="about-box">
                 <div class="about-box__head">
                   <div class="about-box__icon"><img src="img/icon3.svg" alt=""></div>
@@ -367,7 +368,7 @@
               </div>
             </div>
 
-            <div class="col-12 col-sm-6 col-xl-3 mb-30">
+            <div class="col-12 col-sm-6 col-xl-3 mb-30 wow animate__animated animate__fadeInRight">
               <div class="about-box">
                 <div class="about-box__head">
                   <div class="about-box__icon"><img src="img/icon4.svg" alt=""></div>
@@ -386,13 +387,13 @@
     <section class="news">
       <div class="container">
         <div class="row">
-          <div class="col-12">
+          <div class="col-12 wow animate__animated animate__fadeInUp">
             <h2>Новости</h2>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-12 col-sm-6 col-lg-3 mb-30">
+          <div class="col-12 col-sm-6 col-lg-3 mb-30 wow animate__animated animate__fadeInLeft">
             <div class="news-box">
               <a href="article.html" class="news-box__img"><img src="img/new1.jpg" alt=""></a>
               <div class="news-box__body">
@@ -403,7 +404,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-lg-3 mb-30">
+          <div class="col-12 col-sm-6 col-lg-3 mb-30 wow animate__animated animate__fadeInLeft">
             <div class="news-box">
               <a href="article.html" class="news-box__img"><img src="img/new2.jpg" alt=""></a>
               <div class="news-box__body">
@@ -414,7 +415,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-lg-3 mb-30">
+          <div class="col-12 col-sm-6 col-lg-3 mb-30 wow animate__animated animate__fadeInRight">
             <div class="news-box">
               <a href="article.html" class="news-box__img"><img src="img/new3.jpg" alt=""></a>
               <div class="news-box__body">
@@ -425,7 +426,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-lg-3 mb-30">
+          <div class="col-12 col-sm-6 col-lg-3 mb-30 wow animate__animated animate__fadeInRight">
             <div class="news-box">
               <a href="article.html" class="news-box__img"><img src="img/new4.jpg" alt=""></a>
               <div class="news-box__body">
@@ -443,7 +444,7 @@
     <section class="actual-quote">
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center color-accent">
+          <div class="col-12 text-center color-accent wow animate__animated animate__fadeInLeft">
             <h2>Актуальные цитаты </h2>
           </div>
 
@@ -492,7 +493,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <div class="calculate-wrapper">
+            <div class="calculate-wrapper wow animate__animated animate__fadeInUp">
               <div class="calculate-title">
                 <h2>Расчет ИМТ</h2>
                 <div class="box-text">
@@ -616,6 +617,7 @@
         integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 <script src="js/common.js"></script>
 
 </body>
