--- a/app/index.html
+++ b/app/index.html
@@ -52,27 +52,38 @@
               <use xlink:href="img/sprite.svg#arrow-bottom"></use>
             </svg>
           </a>
-          <div class="dropdown-menu">
-            <a href="mission.html" class="dropdown-item">Наша миссия</a>
-            <a href="command.html" class="dropdown-item">Команда</a>
-            <a href="expert.html" class="dropdown-item">
-              Экспертный <br>
-              совет
-              <svg class="svg-icon dropdown-toggle__icon">
-                <use xlink:href="img/sprite.svg#arrow-right"></use>
-              </svg>
-            </a>
-            <a href="#" class="dropdown-item">
-              Пресс-центр
-              <svg class="svg-icon dropdown-toggle__icon">
-                <use xlink:href="img/sprite.svg#arrow-right"></use>
-              </svg>
-            </a>
-            <a href="contacts.html" class="dropdown-item">Контакты</a>
-          </div>
+          <ul class="dropdown-menu my-ul">
+            <li><a href="mission.html" class="dropdown-item">Наша миссия</a></li>
+            <li><a href="command.html" class="dropdown-item">Команда</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-item dropdown-toggle" data-toggle="dropdown">
+                Экспертный <br>
+                совет
+                <svg class="svg-icon dropdown-toggle__icon">
+                  <use xlink:href="img/sprite.svg#arrow-right"></use>
+                </svg>
+              </a>
+              <ul class="dropdown-menu dropdown-submenu my-ul">
+                <li><a href="expert.html" class="dropdown-item">Экспертный совет</a></li>
+                <li><a href="publication.html" class="dropdown-item">Публикации экспертов</a></li>
+              </ul>
+            </li>
+            <li><a href="contacts.html" class="dropdown-item">Контакты</a></li>
+          </ul>
         </li>
-        <li>
-          <a href="projects.html">Проекты</a>
+
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Проекты
+            <svg class="svg-icon dropdown-toggle__icon">
+              <use xlink:href="img/sprite.svg#arrow-bottom"></use>
+            </svg>
+          </a>
+          <ul class="dropdown-menu my-ul">
+            <li><a href="sustainable-nutrition.html" class="dropdown-item">Устойчивое питание</a></li>
+            <li><a href="#" class="dropdown-item">Шаги к долголетию</a></li>
+            <li><a href="#" class="dropdown-item">Школа диабета</a></li>
+            <li><a href="#" class="dropdown-item">Школа сердца</a></li>
+          </ul>
         </li>
         <li>
           <a href="partners.html">Наши партнеры</a>
@@ -83,11 +94,11 @@
               <use xlink:href="img/sprite.svg#arrow-bottom"></use>
             </svg>
           </a>
-          <div class="dropdown-menu">
-            <a href="publication.html" class="dropdown-item">Публикации</a>
-            <a href="expert-opinion.html" class="dropdown-item">Экспертное мнение</a>
-            <a href="smi-about.html" class="dropdown-item">СМИ о нас</a>
-          </div>
+          <ul class="dropdown-menu my-ul">
+            <li><a href="publication.html" class="dropdown-item">Публикации</a></li>
+            <li><a href="expert-opinion.html" class="dropdown-item">Экспертное мнение</a></li>
+            <li><a href="smi-about.html" class="dropdown-item">СМИ о нас</a></li>
+          </ul>
         </li>
       </ul>
     </div>
@@ -108,37 +119,38 @@
                     <use xlink:href="img/sprite.svg#arrow-bottom"></use>
                   </svg>
                 </a>
-                <div class="dropdown-menu">
-                  <a href="mission.html" class="dropdown-item">Наша миссия</a>
-                  <a href="command.html" class="dropdown-item">Команда</a>
-                  <a href="expert.html" class="dropdown-item">
-                    Экспертный <br>
-                    совет
-                    <svg class="svg-icon dropdown-toggle__icon">
-                      <use xlink:href="img/sprite.svg#arrow-right"></use>
-                    </svg>
-                  </a>
-                  <a href="#" class="dropdown-item">
-                    Пресс-центр
-                    <svg class="svg-icon dropdown-toggle__icon">
-                      <use xlink:href="img/sprite.svg#arrow-right"></use>
-                    </svg>
-                  </a>
-                  <a href="contacts.html" class="dropdown-item">Контакты</a>
-                </div>
+                <ul class="dropdown-menu my-ul">
+                  <li><a href="mission.html" class="dropdown-item">Наша миссия</a></li>
+                  <li><a href="command.html" class="dropdown-item">Команда</a></li>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-item dropdown-toggle" data-toggle="dropdown">
+                      Экспертный <br>
+                      совет
+                      <svg class="svg-icon dropdown-toggle__icon">
+                        <use xlink:href="img/sprite.svg#arrow-right"></use>
+                      </svg>
+                    </a>
+                    <ul class="dropdown-menu dropdown-submenu my-ul">
+                      <li><a href="expert.html" class="dropdown-item">Экспертный совет</a></li>
+                      <li><a href="publication.html" class="dropdown-item">Публикации экспертов</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="contacts.html" class="dropdown-item">Контакты</a></li>
+                </ul>
               </li>
+
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Проекты
                   <svg class="svg-icon dropdown-toggle__icon">
                     <use xlink:href="img/sprite.svg#arrow-bottom"></use>
                   </svg>
                 </a>
-                <div class="dropdown-menu">
-                  <a href="sustainable-nutrition.html" class="dropdown-item">Устойчивое питание</a>
-                  <a href="#" class="dropdown-item">Шаги к долголетию</a>
-                  <a href="#" class="dropdown-item">Школа диабета</a>
-                  <a href="#" class="dropdown-item">Школа сердца</a>
-                </div>
+                <ul class="dropdown-menu my-ul">
+                  <li><a href="sustainable-nutrition.html" class="dropdown-item">Устойчивое питание</a></li>
+                  <li><a href="#" class="dropdown-item">Шаги к долголетию</a></li>
+                  <li><a href="#" class="dropdown-item">Школа диабета</a></li>
+                  <li><a href="#" class="dropdown-item">Школа сердца</a></li>
+                </ul>
               </li>
               <li>
                 <a href="partners.html">Наши партнеры</a>
@@ -149,11 +161,11 @@
                     <use xlink:href="img/sprite.svg#arrow-bottom"></use>
                   </svg>
                 </a>
-                <div class="dropdown-menu">
-                  <a href="publication.html" class="dropdown-item">Публикации</a>
-                  <a href="expert-opinion.html" class="dropdown-item">Экспертное мнение</a>
-                  <a href="smi-about.html" class="dropdown-item">СМИ о нас</a>
-                </div>
+                <ul class="dropdown-menu my-ul">
+                  <li><a href="publication.html" class="dropdown-item">Публикации</a></li>
+                  <li><a href="expert-opinion.html" class="dropdown-item">Экспертное мнение</a></li>
+                  <li><a href="smi-about.html" class="dropdown-item">СМИ о нас</a></li>
+                </ul>
               </li>
             </ul>
 
@@ -593,7 +605,9 @@
           <p>Оставьте ваши данные и мы свяжемся с вами в ближайшее время</p>
         </div>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <svg class="svg-icon"><use xlink:href="img/sprite.svg#close"></use></svg>
+          <svg class="svg-icon">
+            <use xlink:href="img/sprite.svg#close"></use>
+          </svg>
         </button>
       </div>
       <div class="modal-body">
